# rusty-mc-launcher

./: .env.development  .env.production.local  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PATCHNOTES.md  README.md  RELEASE_NOTES.md  TODO  biome.json  components.json  db.json  index.html  latest_version.json  openapi-ts.config.ts  package-lock.json  package.json  path.txt  pnpm-lock.yaml  pnpm-workspace.yaml  routes.json  splashscreen.html  tailwind.config.cjs  tailwind.config.js  test.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/: CODE_OF_CONDUCT.md  generate_update.mjs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  e2e.yml  publish.yml  release.yml  show  show.yml  test.yml
docs/: theme.md
extension/: main.js  manifest.json
launcher-lib/: Cargo.toml
launcher-lib/.cargo/: config.toml
launcher-lib/.sqlx/: query-16d166e37b7c4949f716b68b047c315f15867037cb8caccd3c87786d62ed6cc7.json  query-216d873f4f17be27d75c7aa6a96d81c5f1e6ff695d0b256706ccfe09e0d23ab1.json  query-26a63878253a04beeb411c6aeff45ae81a81eee3ea385720e445b9d0dceec4ca.json  query-2e3b134cf0c2f944f26cdc512dc5b8eb4a0cb116bc7d4d00bae28d5a522c2e91.json  query-4cae9111c818b535439153fd73968d315cab32823cd1ee0466509e359fcce06a.json  query-50a514f75efc78dc02a14d67c6637425ddd88b9fd7157e2cd8823d8157d30378.json  query-611d7447cbe943d4d990969aa87f4d4f5167a5081ef6c579c533dabd882049f6.json  query-69bfcb4d793d9c2ae77a2dffba12d94b3dd20aa9404a48001dd331edefd4afcf.json  query-7fcf924a84e4088d49ed09cd6e6568e8436f4f82de31337f318804561b4e9ee4.json  query-8e875974eea9e92b301d0e9ddc04cbc24c70027571d042a5b4845f645d819d4c.json  query-92312e0a1556d2be03e04a2bbf16b8c94c16e088101fdeb33a47efcdf7d1792c.json  query-9d5899a712e4e4266c020a88376fbed70d3a432fb32a52ffcd331ed90d5011b8.json  query-9dd064d3d84300fbab7a726f59958bbf9719dfaae88952f122ab888e572babfa.json  query-bb7a884b4fa9d3e171ecffc5bf2ca682d61860a545715f960dbaed4350e45bcb.json  query-c06d717fcb6b3a08b4b60281f291ae22d359c5ba738deb08c3c07b30a33503f4.json  query-c7ec5a33333cab321e63dbe50d29fa7eb7896608a4316431a364b1f31b737d2d.json  query-caf9f68e8fc5265b2ca4fb57dd847741f8cfa2af89fb5f233859b913ec36ac45.json  query-dc8913265dde78ad47eed29080509e601d445347514df0b8503e7b3774171e35.json  query-dd91e0582037568f3e492a6e0d7097ec19b6cb27c53dda5fd7992b8d3280ae2d.json  query-ec6a4ab05cb0982ca35ca8617200c17da62edf6e10cd6670c132d920dd47d91c.json  query-fcf12583f8f93975a9b403be352c76a7b306292e8c49a1e2a7b419a8e21cc056.json  query-ff6b31d027588ad8518be1e63998850739c67af78a18a152e965b9c4e01d892f.json
launcher-lib/migrations/: 20240519212531_init.sql  20250327185609_profile_isModpack.sql
launcher-lib/src/: client.rs  database.rs  error.rs  errors.rs  events.rs  installer.rs  installer_old.rs  java.rs  lib.rs  manifest.rs  metadata.rs  mods.rs  observer.rs  packs.rs  process.rs  runtime.rs  utils.rs
launcher-lib/src/installer/: compression.rs  download.rs  fabric.rs  fabric_core.rs  forge.rs  metadata.rs  minecraft.rs  mod.rs  neoforge.rs  pack.rs  quilt.rs  utils.rs
launcher-lib/src/installer/content/: curseforge.rs  external.rs  file.rs  mod.rs  mrpack.rs
launcher-lib/src/launcher/: arguments.rs  logs.rs  mod.rs  state.rs
launcher-lib/src/models/: mod.rs  profile.rs  queue.rs  setting.rs
launcher-lib/src/state/: java.rs  mod.rs  models.rs  process.rs  profile.rs  sqlite.rs
patches/: @azure__msal-browser@3.27.0.patch  @azure__msal-browser@3.28.0.patch  @azure__msal-browser@3.28.1.patch  @azure__msal-browser@4.0.2.patch  @azure__msal-browser@4.1.0.patch  @azure__msal-browser@4.2.1.patch
public/: bootstrap.html  index.html
scripts/: dev.mjs  update.mjs
src/: index.css  index.tsx  main.tsx  routeTree.gen.ts  router.tsx  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  log4rs.yml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: migrated.json
src-tauri/mc-laucher-lib-rs/: Cargo.toml  paralleldownload.txt
src-tauri/mc-laucher-lib-rs/src/: client.rs  command.rs  fabric.rs  forge.rs  install.rs  json.rs  lib.rs  login.rs  natives.rs  optifine.rs  runtime.rs  utils.rs
src-tauri/migrations/: 20240519212531_init.sql  20250308223609_add_accounts.sql
src-tauri/permissions/rmcl-auth/: default.toml
src-tauri/permissions/rmcl-content/: default.toml
src-tauri/permissions/rmcl-game/: default.toml
src-tauri/permissions/rmcl-query/: default.toml
src-tauri/src/: consts.rs  deeplink.rs  error.rs  errors.rs  handlers.rs  log4rs.yml  main.rs  oauth.rs  setup.rs  state.rs
src-tauri/src/commands/: auth.rs  check.rs  external.rs  game.rs  game_dir.rs  handlers.rs  install.rs  logger.rs  login.js  login.rs  logout.js  mc_versions.rs  minecraft.rs  mod.rs  news.rs  profile.rs  query.rs  run.rs  setup.rs
src-tauri/src/plugins/: mod.rs  single_instance.rs
src-tauri/src/plugins/auth/: commands.rs  desktop.rs  mod.rs
src-tauri/src/plugins/content/: commands.rs  desktop.rs  mod.rs
src-tauri/src/plugins/game/: commands.rs  desktop.rs  mod.rs
src-tauri/src/plugins/query/: commands.rs  mod.rs
src/actions/: handleCollection.ts  updateCollection.ts  updateProfile.ts
src/components/: App.tsx  Footer.tsx  JVMArgForm.tsx  LibraryCard.tsx  Loading.tsx  ModCard.tsx  ModCardIcon.tsx  ModListCard.tsx  Navbar.tsx  NotificationTime.tsx  SelectBox.tsx  SingleSelectBox.tsx  Spinner.tsx  Unauthenticated.tsx
src/data/: mods.ts
src/dialogs/: ErrorDialog.tsx  ProfileSelect.tsx  profileselect.module.sass
src/hooks/: keys.ts  useAvatar.ts  useCategories.ts  useCategoriesMutation.ts  useCategoryGroup.ts  useCategoryMutation.ts  useDownload.ts  useDownloadProgress.ts  useExternalQueue.ts  useFabricLoaderVersions.ts  useInstallContent.ts  useIsGameRunning.ts  useIsMaximized.ts  useMinecraftVersion.ts  useMinecraftVersions.ts  useModrinth.ts  useModrinthNoitications.ts  useMutateProfile.ts  useProcessState.ts  useProfile.ts  useProfiles.ts  useQueue.ts  useRunGame.ts  useSearch.ts  useUser.ts
src/lib/: Facets.ts  JvmArgs.test.ts  JvmArgs.ts  QueueItemState.ts  accout.ts  auth.ts  buildLastVerseionId.ts  (+27 more)
(+386 files in other folders)
