[package]
name = "minecraft-launcher-lib"
version = "0.10.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros","time", "migrate"]}
tokio = { version = "1.43.0", features = [ "test-util", "macros", "fs", "process","sync"] }
async_zip = { version = "0.0.17", features = ["tokio","tokio-fs","deflate"] }
tauri = { version = "2.1.5", default-features = false }
uuid = { version= "1.12.1", features = ["v4","serde"]}
os_info = { version = "3", default-features = false }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.7.1", features = ["serde"] }
time = { version="0.3.37", features = ["serde"]}
lenient_semver = "0.4.2"
sanitize-filename = "0.6.0"
normalize-path = "0.2.1"
lazy_static = "1.5.0"
tokio-util = "0.7.13"
urlencoding = "2.1.3"
lazy-regex = "3.4.1"
serde_json = "1.0"
futures = "0.3.31"
sysinfo = "0.33.1"
thiserror = "2.0"
regex = "1.11.1"
sha1 = "0.10.6"
log = "0.4.25"
hex = "0.4.3"
[dev-dependencies]
env_logger = "0.11"
