[package]
name = "app"
version = "0.8.3"
description = "Minecraft Launcher and mod installer"
authors = ["Collin Blosser"]
license = "MIT"
repository = "https://github.com/VisualSource/rusty-mc-launcher"
default-run = "app"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["protocol-asset"] }
tauri-plugin-http = {version ="2.3", features = ["multipart"] }
tauri-plugin-single-instance = { version ="2.2", features = ["deep-link"] }
tauri-plugin-deep-link = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-log = "2.2"
tauri-plugin-fs = "2.2"

minecraft-launcher-lib = { path = "../launcher-lib"  }
tokio = { version = "1.43.0", features = ["sync"] }
tokio-util = "0.7.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
httparse = "1.10.1"
copy_dir = "0.1.3"
thiserror = "2.0.12"
time = "0.3.37"
log = "0.4.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.5"

[profile.release]
strip = true  # Remove debug symbols
opt-level = "s"  # Optimize for binary size
lto = true  # Enables link to optimizations
codegen-units = 1 # Compile crates one after another so the compiler can optimize better


