[package]
name = "app"
version = "0.9.0"
description = "Minecraft Launcher and mod installer"
authors = ["Collin Blosser"]
license = "MIT"
repository = "https://github.com/VisualSource/rusty-mc-launcher"
default-run = "app"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["protocol-asset"] }
tauri-plugin-http = {version ="2.4.2", features = ["multipart", "blocking", "json"] }
tauri-plugin-single-instance = { version ="2.2.2", features = ["deep-link"] }
tauri-plugin-deep-link = "2.2.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.6.1"
tauri-plugin-process = "2.2.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-log = "2.3.1"
tauri-plugin-fs = "2.2.0"

minecraft-launcher-lib = { path = "../launcher-lib"  }
openidconnect = { version = "4.0.0", default-features = false}
tokio = { version = "1.44.0", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
tokio-util = "0.7.13"
serde_json = "1.0"
thiserror = "2.0.12"
copy_dir = "0.1.3"
time = "0.3.39"
log = "0.4.26"

[profile.release]
strip = true  # Remove debug symbols
opt-level = "s"  # Optimize for binary size
lto = true  # Enables link to optimizations
codegen-units = 1 # Compile crates one after another so the compiler can optimize better


