[package]
name = "mc-laucher-lib-rs"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "0.9.0"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde-xml-rs = "0.5.1"
scraper = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "1.0.0", features = [ "v4" ] }
urlparse = "0.7.3"
os-version = "0.2.0"
zip = "0.6.2"
regex = "1.5.5"
lzma-rs = "0.2.0"
rust-crypto = "0.2.36"
log = "0.4.16"
thiserror = "1.0.30"
jsonwebtoken = "8.1.0"
base64 = "0.13.0"
futures = "0.3.21"
tokio = { version = "1.18.0", features = [ "test-util", "macros", "fs", "process" ] }